--- a/www/css/formated.css
+++ b/www/css/formated.css
@@ -6,7 +6,7 @@ body, html {
     /*overflow: hidden;*/
     padding:0px;
 	font-size: 16px;
-	background-color: #f3f3f3;
+	background-color: #1970AA;
 	margin:0px;
 	
 }
