--- a/www/css/formated.css
+++ b/www/css/formated.css
@@ -6,7 +6,7 @@ body, html {
     /*overflow: hidden;*/
     padding:0px;
 	font-size: 16px;
-	background-color: #1970AA;
+	background-color: #fff;
 	margin:0px;
 	
 }
